--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0"
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "nuxt": "^2.0.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "sass-loader": "^7.1.0",
+    "vue-three-wrap": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
