--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt-sass-resources-loader": "^2.0.5",
     "popmotion": "^8.5.5",
     "sass-loader": "^7.1.0",
-    "three": "^0.99.0"
+    "three": "^0.99.0",
+    "vue-three-wrap": "^1.1.6"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
