--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.11",
     "markdown-loader": "^5.0.0",
     "node-sass": "^4.11.0",
+    "noisejs": "^2.1.0",
     "nuxt": "^2.0.0",
     "nuxt-sass-resources-loader": "^2.0.5",
     "popmotion": "^8.5.5",
