--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "popmotion": "^8.5.5",
     "sass-loader": "^7.1.0",
     "three": "^0.99.0",
+    "three-orbit-controls": "^82.1.0",
     "vue-three-wrap": "^2.0.0"
   },
   "devDependencies": {
