--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fuzzco/full-canvas": "^1.0.0",
     "cross-env": "^5.2.0",
     "html-loader": "^0.5.5",
     "lodash": "^4.17.11",
@@ -19,6 +20,7 @@
     "noisejs": "^2.1.0",
     "nuxt": "^2.0.0",
     "nuxt-sass-resources-loader": "^2.0.5",
+    "phenomenon": "^1.6.0",
     "popmotion": "^8.5.5",
     "sass-loader": "^7.1.0",
     "three": "^0.99.0",
